[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Assets/Player/Player.png" type="Texture" id=2]
[ext_resource path="res://Assets/light.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=3]
radius = 60.0

[sub_resource type="CapsuleShape2D" id=2]
height = 8.0

[node name="Enemy" type="KinematicBody2D" groups=[
"mob",
]]
position = Vector2( 104, 104 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 0.427451, 0.427451, 1 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
vframes = 4

[node name="BarrelHolder" type="Node2D" parent="."]
position = Vector2( 0, -8 )

[node name="Barrel" type="Node2D" parent="BarrelHolder"]
position = Vector2( 12, 0 )

[node name="Area2D" type="Area2D" parent="BarrelHolder"]
position = Vector2( 0, 8 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="BarrelHolder/Area2D"]
position = Vector2( 0, -8 )
scale = Vector2( 1.6, 1.6 )
polygon = PoolVector2Array( 0, 0, 48, -35, 52, -30, 58, -16, 60, 0, 58, 15, 52, 30, 48, 35 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BarrelHolder/Area2D"]
visible = false
position = Vector2( 0, -8 )
shape = SubResource( 3 )

[node name="Light2D" type="Light2D" parent="BarrelHolder"]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )
offset = Vector2( 1, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8 )
shape = SubResource( 2 )

[connection signal="body_entered" from="BarrelHolder/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="BarrelHolder/Area2D" to="." method="_on_Area2D_body_exited"]
